[package]
name = "opentsdb-rollup-rust"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Alex Parrill <aparrill@datto.com>"]
edition = "2018"

[features]
default = ["hdfs", "redis"]
#default = []

[dependencies]
chrono = "0.4.9"
crossbeam-channel = "0.3.9"
fern = "0.5.9"
flate2 = {version="1.0.11", default-features=false, features=["zlib"]}
hdfs = {git = "https://github.com/datto/hdfs-rs.git", optional=true}
lazy_static = "1.4.0"
log = "0.4.6"
num-derive = "0.3.0"
num-traits = "0.2.10"
psutil = "1.7.0"
rand = "0.7.1"
rdkafka = "0.21.0"
redis = {version="0.13.0", optional=true}
regex = "1.3.1"
rmp-serde = "0.14.0"
serde = {version="1.0.101", features=["derive", "rc"]}
serde_json = "1.0.39"
signal-hook = "0.1.10"
structopt = "0.3.1"
zstd = "0.5.1"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
#debug = true # For perf profiling
